stylesheets/styles.css
h2 {
	font-family: Helvetica;
}
h4 {
	color: #1a0dab;
	font-family: Verdana;
}

p {
	color: orange;
}

li {
	color: green;
}

img {
	max-width:100%;
}



input[type=text]:focus{
	width:100%;
}

ul {
	list-style: none;
}

.jumbotron {
	background-image:url('http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg');
	padding: 20%;
	background-repeat: no-repeat;
	background-size: cover;
	width: 1425px;
	height:600px;
	margin-top: -40px;
	background-attachment: fixed;
	background-position:  center -238px;
}
.jumbotron h1 {
	top:18;
	left:0;
	padding-left: 20px;
	color: white;
	text-align: center;
	font-family:Verdana;
}


footer {
	background-color: #182642;
	padding-top: 10px;
	padding-left: 10px;
	padding-right: 10px;
	padding-bottom: 10px;
	text-align:center;
	font-family:Verdana;
}

